--- a/REVISAT/REVISAT_script.ipynb
+++ b/REVISAT/REVISAT_script.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/REVISAT/REVISAT_script.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "7852b47e-53f8-48ca-ae07-79f98e37dba2",
       "metadata": {
         "id": "7852b47e-53f8-48ca-ae07-79f98e37dba2"
@@ -11,41 +21,7 @@
         "REVISAT is a script that allows reviewing a dataset, in draft, before being published, to ensure compliance with good open access practices. It is a first version, and as the repository software is updated and/or metadata is updated, the script will be changed accordingly.\n",
         "If you as a user have any doubts about the operation, proposal, or suggestion for improvement and want to incorporate it into the script, please write to us at: rdr-contacte@csuc.cat\n",
         "\n",
-        "Last updated: 2023-11-14"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3fff23c3-7143-41d6-9123-a55fcfb4b596",
-      "metadata": {
-        "cellView": "form",
-        "id": "3fff23c3-7143-41d6-9123-a55fcfb4b596"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Install or update libraries (Click execution button &#x25B6; )\n",
-        "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
-        "\n",
-        "# Function to install required packages\n",
-        "def install_packages(b):\n",
-        "    clear_output(wait=True)\n",
-        "    !pip install --upgrade pip -q\n",
-        "    !pip --upgrade tensorflow-probability -q\n",
-        "    !pip install pyDataverse -q\n",
-        "    !pip install selenium -q\n",
-        "    print(\"S'han descarregat o actualitzat les llibreries.\")\n",
-        "\n",
-        "# Displaying installation message\n",
-        "display(HTML(\"<p style='font-size:14px;'><b>Feu clic al botó següent per instal·lar les llibreries.</b></p>\"))\n",
-        "\n",
-        "# Creating installation button\n",
-        "install_button = widgets.Button(description='Instal·lar llibreries')\n",
-        "install_button.on_click(install_packages)\n",
-        "\n",
-        "# Displaying the installation button\n",
-        "display(install_button)"
+        "Last updated: 2025-03-25"
       ]
     },
     {
@@ -58,15 +34,48 @@
       },
       "outputs": [],
       "source": [
-        "# @title Introduir DOI (doi:10.34810/dataXXX), el token i el nom complet de la institució. Clicar botó d'executar cel·la &#x25B6;\n",
+        "# @title Introduir últims digits del DOI, el token (<a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>) i el nom complet de la institució. Clicar botó d'executar cel·la &#x25B6;\n",
+        "import os\n",
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "# Function to install required packages\n",
+        "def install_packages():\n",
+        "    \"\"\"\n",
+        "    Function to install or update necessary Python packages.\n",
+        "    \"\"\"\n",
+        "    # Upgrade pip first\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"pip\", \"-q\"])\n",
+        "\n",
+        "    # Install the required libraries\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"selenium\", \"-q\"])\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"--upgrade\", \"tensorflow-probability\", \"-q\"])\n",
+        "\n",
+        "\n",
+        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "\n",
+        "# Install libraries if they are not installed already\n",
+        "try:\n",
+        "    import pyDataverse\n",
+        "except ImportError:\n",
+        "    print(\"Installing libraries...\")\n",
+        "    install_packages()\n",
+        "\n",
+        "try:\n",
+        "    import google.colab\n",
+        "    IN_COLAB = True\n",
+        "except ImportError:\n",
+        "    IN_COLAB = False\n",
+        "\n",
+        "\n",
         "from datetime import date\n",
         "from pyDataverse.api import NativeApi, DataAccessApi\n",
         "from selenium import webdriver\n",
         "from selenium.webdriver.common.keys import Keys\n",
         "from selenium.webdriver.common.by import By\n",
-        "import sys\n",
         "import numpy as np\n",
-        "import os\n",
         "from collections import Counter\n",
         "import textwrap\n",
         "import pprint\n",
@@ -352,7 +361,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
