--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -25,12 +25,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "cellView": "form",
-        "id": "0G7zzKeZl-Hv"
+        "id": "0G7zzKeZl-Hv",
+        "outputId": "3e991683-9c27-4987-fa48-00cabf5ef294",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 597
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Please enter your API token:3029e84b-1833-40e5-a0e3-8c9a97cb64bb\n",
+            "Please enter the LAST DIGIT of the DOI (only numbers): 123\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'html2text'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-7229e080d2c4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1268\u001b[0m                    LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values)\n\u001b[1;32m   1269\u001b[0m     \u001b[0mfilemetadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdoi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemetadata_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemetadata_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1270\u001b[0;31m     createreadme(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys,\n\u001b[0m\u001b[1;32m   1271\u001b[0m                  \u001b[0msocial_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mastronomy_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mastronomy_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbiomedical_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbiomedical_values\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1272\u001b[0m                  \u001b[0mjournal_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjournal_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomputationalworkflow_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomputationalworkflow_values\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-6-7229e080d2c4>\u001b[0m in \u001b[0;36mcreatereadme\u001b[0;34m(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, computationalworkflow_keys, computationalworkflow_values, LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values, filemetadata_keys, filemetadata_values)\u001b[0m\n\u001b[1;32m    411\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mpyDataverse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataverse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    412\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 413\u001b[0;31m     \u001b[0;32mimport\u001b[0m \u001b[0mhtml2text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    414\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    415\u001b[0m     \u001b[0;31m# Instantiate API objects for accessing Dataverse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'html2text'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
         "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> After that, enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).</p> Finally click <strong>Download Readme</strong> to download the file.\n",
         "import os\n",
@@ -47,6 +83,7 @@
         "\n",
         "    # Install the required libraries\n",
         "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"pyDataverse\", \"-q\"])\n",
+        "\n",
         "\n",
         "    print(\"Libraries have been downloaded or updated.\")\n",
         "\n",
@@ -177,7 +214,6 @@
         "    \"\"\"\n",
         "    from pyDataverse.api import NativeApi, DataAccessApi\n",
         "    from pyDataverse.models import Dataverse\n",
-        "    import html2text\n",
         "    import os\n",
         "\n",
         "    # Instantiate API objects for accessing Dataverse\n",
