--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -25,46 +25,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "0G7zzKeZl-Hv",
-        "outputId": "3e991683-9c27-4987-fa48-00cabf5ef294",
+        "outputId": "3fd42ade-c79f-4586-fcbf-17bb4cd1847a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 597
-        }
+          "height": 103,
+          "referenced_widgets": [
+            "b78af0b010b8449cb9610935a0ccf5a0",
+            "9b3a3270586d4541ada248cedf85a1d8",
+            "a38036d3bc31408db05646df0751c3e1"
+          ]
+        },
+        "cellView": "form"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Please enter your API token:3029e84b-1833-40e5-a0e3-8c9a97cb64bb\n",
-            "Please enter the LAST DIGIT of the DOI (only numbers): 123\n"
+            "Please enter the LAST DIGIT of the DOI (only numbers): 123\n",
+            "The Readme has been created in the directory data123.\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'html2text'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-7229e080d2c4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1268\u001b[0m                    LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values)\n\u001b[1;32m   1269\u001b[0m     \u001b[0mfilemetadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdoi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemetadata_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilemetadata_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1270\u001b[0;31m     createreadme(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys,\n\u001b[0m\u001b[1;32m   1271\u001b[0m                  \u001b[0msocial_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mastronomy_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mastronomy_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbiomedical_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbiomedical_values\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1272\u001b[0m                  \u001b[0mjournal_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjournal_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomputationalworkflow_keys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcomputationalworkflow_values\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-6-7229e080d2c4>\u001b[0m in \u001b[0;36mcreatereadme\u001b[0;34m(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys, journal_values, computationalworkflow_keys, computationalworkflow_values, LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values, filemetadata_keys, filemetadata_values)\u001b[0m\n\u001b[1;32m    411\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mpyDataverse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataverse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    412\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 413\u001b[0;31m     \u001b[0;32mimport\u001b[0m \u001b[0mhtml2text\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    414\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    415\u001b[0m     \u001b[0;31m# Instantiate API objects for accessing Dataverse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'html2text'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Button(description='Download Readme', style=ButtonStyle())"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "b78af0b010b8449cb9610935a0ccf5a0"
+            }
+          },
+          "metadata": {}
         }
       ],
       "source": [
@@ -480,7 +478,6 @@
         "    from pyDataverse.api import NativeApi, DataAccessApi\n",
         "    from pyDataverse.models import Dataverse\n",
         "    import os\n",
-        "    import html2text\n",
         "\n",
         "    # Instantiate API objects for accessing Dataverse\n",
         "    api = NativeApi(base_url, token)\n",
@@ -1389,6 +1386,100 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.12"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "b78af0b010b8449cb9610935a0ccf5a0": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ButtonView",
+            "button_style": "",
+            "description": "Download Readme",
+            "disabled": false,
+            "icon": "",
+            "layout": "IPY_MODEL_9b3a3270586d4541ada248cedf85a1d8",
+            "style": "IPY_MODEL_a38036d3bc31408db05646df0751c3e1",
+            "tooltip": ""
+          }
+        },
+        "9b3a3270586d4541ada248cedf85a1d8": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "a38036d3bc31408db05646df0751c3e1": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "button_color": null,
+            "font_weight": ""
+          }
+        }
+      }
     }
   },
   "nbformat": 4,
