--- a/metrics/metrics_script.ipynb
+++ b/metrics/metrics_script.ipynb
@@ -282,7 +282,7 @@
         "\n",
         "from google.colab import files\n",
         "# Save the DataFrame to an Excel file\n",
-        "excel_filename = 'datasets_sizes.xlsx'\n",
+        "excel_filename = 'metrics.xlsx'\n",
         "df.to_excel(excel_filename, index=False)\n",
         "\n",
         "# Display the DataFrame\n",
