--- a/metrics/metrics_script.ipynb
+++ b/metrics/metrics_script.ipynb
@@ -174,8 +174,7 @@
         "    'URL', 'UIC', 'UIB', 'Agrotecnio', 'CED', 'CRAG', 'CREAF', 'CRM', 'CTFC','CVC',\n",
         "    'i2CAT', 'I3PT', 'IBEC', 'IBEI', 'ICAC-CERCA', 'ICFO-CERCA','ICIQ', 'ICN2',\n",
         "    'ICRA-CERCA', 'IDIBAPS', 'IDIBELL', 'IDIBGI-CERCA', 'IFAE', 'IJC','IRSantPau','CVC','IRSJD',\n",
-        "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA','IRSJD'\n",
-        "    'ISGLOBAL', 'VHIR'\n",
+        "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA','IRSJD','ISGLOBAL', 'VHIR'\n",
         "]\n",
         "# Add an option for selecting all\n",
         "options_institucions = ['All institutions'] + institucions\n",
