--- a/multiple_datasets_metadata/multiple_datasets_metadata_script.ipynb
+++ b/multiple_datasets_metadata/multiple_datasets_metadata_script.ipynb
@@ -401,7 +401,7 @@
         "    'URL', 'UIC', 'UIB', 'Agrotecnio', 'CED', 'CRAG', 'CREAF', 'CRM', 'CTFC','CVC',\n",
         "    'i2CAT', 'I3PT', 'IBEC', 'IBEI', 'ICAC-CERCA', 'ICFO-CERCA','ICIQ', 'ICN2',\n",
         "    'ICRA-CERCA', 'IDIBAPS', 'IDIBELL', 'IDIBGI-CERCA', 'IFAE', 'IJC','IRSantPau','CVC','IRSJD',\n",
-        "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA','IRSJD'\n",
+        "    'IPHES-CERCA', 'IRBBarcelona-CERCA', 'IRB', 'IRSICAIXA', 'IRTA','IRSJD',\n",
         "    'ISGLOBAL', 'VHIR'\n",
         "]\n",
         "\n",
