--- a/persistent_link/extract_persistent_link.ipynb
+++ b/persistent_link/extract_persistent_link.ipynb
@@ -161,7 +161,8 @@
         "files.download(f'{excel_name}.xlsx')"
       ],
       "metadata": {
-        "id": "J2kPY1tnptd1"
+        "id": "J2kPY1tnptd1",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
