--- a/change_CSV_delimiter/csv_delimiter_converter.ipynb
+++ b/change_CSV_delimiter/csv_delimiter_converter.ipynb
@@ -42,53 +42,42 @@
       "cell_type": "code",
       "source": [
         "# @title First click the ▶ button to execute the script. </p> Then click the <strong>'Upload'</strong> button to upload the CSV files. </p>\n",
-        "\n",
         "import os\n",
         "import csv\n",
         "import shutil\n",
         "import chardet\n",
-        "import datetime\n",
         "from google.colab import files\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, HTML, clear_output\n",
-        "from io import BytesIO, StringIO\n",
-        "\n",
-        "# Detect delimiter using csv.Sniffer\n",
-        "def detect_delimiter(sample):\n",
-        "    try:\n",
-        "        sniffer = csv.Sniffer()\n",
-        "        dialect = sniffer.sniff(sample, delimiters=[',',';','\\t'])\n",
-        "        return dialect.delimiter\n",
-        "    except csv.Error:\n",
-        "        return ','  # default fallback\n",
+        "from io import StringIO\n",
         "\n",
         "# Detect encoding using chardet\n",
         "def detect_encoding(byte_content):\n",
         "    result = chardet.detect(byte_content)\n",
         "    return result['encoding'] or 'utf-8'\n",
         "\n",
-        "# Process CSV content\n",
+        "# Process CSV content: convert ; → , and quote fields with commas\n",
         "def process_csv(byte_content, original_filename):\n",
         "    encoding = detect_encoding(byte_content)\n",
         "    decoded_text = byte_content.decode(encoding, errors='replace')\n",
         "\n",
-        "    sample = decoded_text[:2048]\n",
-        "    delimiter = detect_delimiter(sample)\n",
+        "    lines = decoded_text.splitlines()\n",
+        "    output_lines = []\n",
         "\n",
-        "    input_io = StringIO(decoded_text)\n",
-        "    output_io = StringIO()\n",
+        "    for line in lines:\n",
+        "        fields = line.strip().split(';')  # only split on ;\n",
+        "        new_fields = []\n",
         "\n",
-        "    reader = csv.reader(input_io, delimiter=delimiter)\n",
-        "    writer = csv.writer(output_io, delimiter=',', quoting=csv.QUOTE_MINIMAL)\n",
+        "        for field in fields:\n",
+        "            field = field.strip()\n",
+        "            if ',' in field or '\"' in field:\n",
+        "                field = field.replace('\"', '\"\"')  # escape internal quotes\n",
+        "                field = f'\"{field}\"'  # wrap in quotes\n",
+        "            new_fields.append(field)\n",
         "\n",
-        "    try:\n",
-        "        for row in reader:\n",
-        "            writer.writerow(row)\n",
-        "    except Exception as e:\n",
-        "        print(f\"⚠️ Error processing {original_filename}: {e}\")\n",
-        "        return None\n",
+        "        output_lines.append(','.join(new_fields))\n",
         "\n",
-        "    return output_io.getvalue()\n",
+        "    return '\\n'.join(output_lines)\n",
         "\n",
         "# Handle file uploads\n",
         "def on_file_upload(change):\n",
@@ -109,13 +98,13 @@
         "    for uploaded_file in uploaded_files:\n",
         "        byte_content = uploaded_file['content']\n",
         "        original_filename = uploaded_file['metadata']['name']\n",
-        "        new_filename = os.path.splitext(original_filename)[0] + '_new.csv'\n",
+        "        new_filename = os.path.splitext(original_filename)[0] + '_converted.csv'\n",
         "\n",
         "        processed_content = process_csv(byte_content, original_filename)\n",
         "\n",
         "        if processed_content:\n",
         "            file_path = os.path.join(directory_name, new_filename)\n",
-        "            with open(file_path, 'w', encoding='utf-8') as f:\n",
+        "            with open(file_path, 'w', encoding='utf-8', newline='') as f:\n",
         "                f.write(processed_content)\n",
         "            processed_count += 1\n",
         "\n",
@@ -132,9 +121,9 @@
         "# Display instructions\n",
         "display(HTML(\"\"\"\n",
         "<p style='font-size:14px;'><b>\n",
-        "Please upload your CSV files (any delimiter or encoding).<br>\n",
-        "The files will be normalized to UTF-8 and comma-delimited.<br>\n",
-        "Processed files will be downloaded as a ZIP archive.\n",
+        "Please upload your CSV files using semicolon (;) delimiters.<br>\n",
+        "They will be converted to UTF-8, comma-delimited CSV files.<br>\n",
+        "Fields with commas will be quoted. Resulting files will be zipped for download.\n",
         "</b></p>\n",
         "\"\"\"))\n",
         "\n",
@@ -142,7 +131,6 @@
         "upload_button = widgets.FileUpload(accept='.csv', multiple=True)\n",
         "upload_button.observe(on_file_upload, names='value')\n",
         "display(upload_button)\n",
-        "\n",
         "\n"
       ],
       "metadata": {
