--- a/persistent_link/extract_persistent_link.ipynb
+++ b/persistent_link/extract_persistent_link.ipynb
@@ -101,7 +101,7 @@
         "# Provide input values\n",
         "token = \"\"  # @param {type:\"string\"}\n",
         "identifier = \"\"  # @param {type:\"string\"}\n",
-        "base_url = \"https://dataverse.csuc.cat/\"  # @param {type:\"string\"}\n",
+        "base_url = \"\"  # @param {type:\"string\"}\n",
         "doi = identifier\n",
         "api = NativeApi(base_url,token)\n",
         "data_api = DataAccessApi(base_url,token)\n",
@@ -148,7 +148,7 @@
         "# Populate the DataFrame\n",
         "data = []\n",
         "for values in filemetadata_values_one:\n",
-        "    data.append({'id': f\"https://dataverse.csuc.cat/file.xhtml?fileId={values[0]}\", 'filename': values[3]})\n",
+        "    data.append({'id': f\"https://dataverse.csuc.cat/file.xhtml?fileId={values[0]}\", 'filename': values[2]})\n",
         "df = pd.concat([df, pd.DataFrame(data)], ignore_index=True)\n",
         "# Rename 'id' column to 'Persistent Link'\n",
         "df.rename(columns={'id': 'Persistent Link'}, inplace=True)\n",
