--- a/change_CSV_delimiter/csv_delimiter_converter.ipynb
+++ b/change_CSV_delimiter/csv_delimiter_converter.ipynb
@@ -59,6 +59,7 @@
         "# Process CSV content: convert ; → , and quote fields with commas\n",
         "def process_csv(byte_content, original_filename):\n",
         "    encoding = detect_encoding(byte_content)\n",
+        "    print(f\"Detected encoding for {original_filename}: {encoding}\")  # Added for debug\n",
         "    decoded_text = byte_content.decode(encoding, errors='replace')\n",
         "\n",
         "    lines = decoded_text.splitlines()\n",
@@ -90,7 +91,7 @@
         "    uploaded_files = change.new.values()\n",
         "\n",
         "    # Output directory\n",
-        "    directory_name = f'processed_csv_files'\n",
+        "    directory_name = 'processed_csv_files'\n",
         "    os.makedirs(directory_name, exist_ok=True)\n",
         "\n",
         "    processed_count = 0\n",
@@ -104,8 +105,11 @@
         "\n",
         "        if processed_content:\n",
         "            file_path = os.path.join(directory_name, new_filename)\n",
-        "            with open(file_path, 'w', encoding='utf-8', newline='') as f:\n",
+        "\n",
+        "            # Write with utf-8-sig so Excel reads correctly\n",
+        "            with open(file_path, 'w', encoding='utf-8-sig', newline='') as f:\n",
         "                f.write(processed_content)\n",
+        "\n",
         "            processed_count += 1\n",
         "\n",
         "    if processed_count == 0:\n",
@@ -123,15 +127,15 @@
         "<p style='font-size:14px;'><b>\n",
         "Please upload your CSV files using semicolon (;) delimiters.<br>\n",
         "They will be converted to UTF-8, comma-delimited CSV files.<br>\n",
-        "Fields with commas will be quoted. Resulting files will be zipped for download.\n",
+        "Fields with commas will be quoted. Resulting files will be zipped for download.<br>\n",
+        "Excel-compatible: UTF-8 BOM is included to ensure correct display of special characters.\n",
         "</b></p>\n",
         "\"\"\"))\n",
         "\n",
-        "# Upload widget\n",
-        "upload_button = widgets.FileUpload(accept='.csv', multiple=True)\n",
-        "upload_button.observe(on_file_upload, names='value')\n",
-        "display(upload_button)\n",
-        "\n"
+        "# File upload widget\n",
+        "uploader = widgets.FileUpload(accept='.csv', multiple=True)\n",
+        "uploader.observe(on_file_upload, names='value')\n",
+        "display(uploader)\n"
       ],
       "metadata": {
         "cellView": "form",
