--- a/persistent_link/extract_persistent_link.ipynb
+++ b/persistent_link/extract_persistent_link.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/persistent_link/extract_persistent_link.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -45,26 +56,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title Install or Update Libraries. Click the Run button &#x25B6;\n",
+        "# @title Install or Update Libraries. Click the Run button ▶\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, HTML, clear_output\n",
         "\n",
         "def install_packages(b):\n",
         "    \"\"\"\n",
         "    Function to install or update required Python libraries.\n",
-        "\n",
-        "    Args:\n",
-        "    b: Button object.\n",
-        "\n",
-        "    Returns:\n",
-        "    None\n",
         "    \"\"\"\n",
         "    clear_output(wait=True)\n",
         "    !pip install --upgrade pip -q\n",
-        "    !pip install pyDataverse -q\n",
-        "    !pip install xlsxwriter -q\n",
-        "    !pip install pandas -q\n",
-        "    print(\"Libraries have been downloaded or updated.\")\n",
+        "    !pip install \"pyDataverse\" \"xlsxwriter\" \"pandas\" \"httpx>=0.28.1,<1.0.0\" -q\n",
+        "    print(\"Libraries have been downloaded or updated (including correct httpx version).\")\n",
         "\n",
         "# Display installation message\n",
         "display(HTML(\"<p style='font-size:14px;'><b>Click the button below to install the libraries.</b></p>\"))\n",
@@ -74,7 +77,7 @@
         "install_button.on_click(install_packages)\n",
         "\n",
         "# Display the installation button\n",
-        "display(install_button)"
+        "display(install_button)\n"
       ],
       "metadata": {
         "id": "cgzJstRppkbM",
@@ -101,7 +104,7 @@
         "# Provide input values\n",
         "token = \"\"  # @param {type:\"string\"}\n",
         "identifier = \"\"  # @param {type:\"string\"}\n",
-        "base_url = \"\"  # @param {type:\"string\"}\n",
+        "base_url = \"https://dataverse.csuc.cat/\"  # @param {type:\"string\"}\n",
         "doi = identifier\n",
         "api = NativeApi(base_url,token)\n",
         "data_api = DataAccessApi(base_url,token)\n",
