--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -816,6 +816,7 @@
         "            'Dataset DOI':'Dataset DOI',\n",
         "            'Related publication': 'Related publication',\n",
         "            'Geographical location/s of data collection': 'Geographical location/s of data collection',\n",
+        "            'Geographic Bounding Box': 'Geographic Bounding Box'\n",
         "            'Time period covered (single date or date range)': 'Time period covered (single date or date range)',\n",
         "            'Date of data collection (single date or date range)': 'Date of data collection (single date or date range)',\n",
         "            'Target Sample Size': 'Target Sample Size',\n",
@@ -860,6 +861,7 @@
         "            'Creative Commons License of the dataset':'Licencia Creative Commons del dataset',\n",
         "            'Dataset DOI':'DOI del dataset',\n",
         "            'Related publication': 'Publicación relacionada',\n",
+        "            'Geographic Bounding Box': 'Cuadro Geográfico de delimitación',\n",
         "            'Geographical location/s of data collection': 'Ubicación(es) geográfica(s) de la recopilación de datos',\n",
         "            'Time period covered (single date or date range)': 'Periodo de tiempo cubierto (fecha única o rango de fechas)',\n",
         "            'Date of data collection (single date or date range)': 'Fecha de recogida de datos (fecha única o rango de fechas)',\n",
@@ -874,7 +876,7 @@
         "            'Series': 'Serie',\n",
         "            'Software': 'Software',\n",
         "            'Time period covered (single date or date range)': 'Periodo de tiempo cubierto (fecha única o rango de fechas)',\n",
-        "            \"FILE OVERVIEW\": \"RESUMEN DEL ARCHIVO\",\n",
+        "            \"FILE OVERVIEW\": \"RESUMEN DE LOS ARCHIVOS\",\n",
         "            \"File name\": \"Nombre del archivo\",\n",
         "            \"Description\": \"Descripción\",\n",
         "            \"File format\": \"Formato del archivo\"\n",
@@ -905,6 +907,7 @@
         "            'Creative Commons License of the dataset':'Llicència Creative Commons del dataset',\n",
         "            'Dataset DOI':'DOI del dataset',\n",
         "            'Related publication': 'Publicació relacionada',\n",
+        "            'Geographic Bounding Box': 'Quadre Geogràfic de delimitació',\n",
         "            'Geographical location/s of data collection': 'Ubicació(ons) geogràfica(s) de la recopilació de dades',\n",
         "            'Time period covered (single date or date range)': 'Període de temps cobert (data única o rang de dates)',\n",
         "            'Date of data collection (single date or date range)': 'Data de recollida de dades (data única o rang de dates)',\n",
@@ -919,7 +922,7 @@
         "            'Series': 'Sèrie',\n",
         "            'Software': 'Programari',\n",
         "            'Time period covered (single date or date range)': 'Període de temps cobert (data única o rang de dates)',\n",
-        "            \"FILE OVERVIEW\": \"RESUM DEL FITXER\",\n",
+        "            \"FILE OVERVIEW\": \"RESUM DELs FITXERS\",\n",
         "            \"File name\": \"Nom del fitxer\",\n",
         "            \"File description\": \"Descripció\",\n",
         "            \"File format\": \"Format del fitxer\"\n",
@@ -1041,7 +1044,7 @@
         "\n",
         "        #Geospatial metadata\n",
         "        if len(geo_keys) != 0:\n",
-        "            title = translate_key('Geospatial Metadata', lang, dict_type='title')\n",
+        "            title = translate_key('GEOSPATIAL METADATA', lang, dict_type='title')\n",
         "            f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont = 0\n",
         "            cont = write_grouped_keys_section(f, cont, ['country', 'state', 'city', 'otherGeographicCoverage'], geo_keys, geo_values, lang, 'Geographical location/s of data collection')\n",
@@ -1050,7 +1053,7 @@
         "\n",
         "        #Social science metadata\n",
         "        if len(social_keys) != 0:\n",
-        "            title = translate_key('Social Science and Humanities Metadata', lang, dict_type='title'); f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
+        "            title = translate_key('SOCIAL SCIENCE AND HUMANITIES METADATA', lang, dict_type='title'); f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont = 0\n",
         "            cont = write_single_key_section(f, cont, 'unitOfAnalysis', social_keys, social_values, lang, 'unitOfAnalysis')\n",
         "            cont = write_single_key_section(f, cont, 'universe', social_keys, social_values, lang, 'universe')\n",
@@ -1076,7 +1079,7 @@
         "\n",
         "        #Astronomy metadata\n",
         "        if len(astronomy_keys) != 0:\n",
-        "            title = translate_key('Astronomy and Astrophysics Metadata', lang, dict_type='title')\n",
+        "            title = translate_key('ASTRONOMY AND ASTROPHYSICS METADATA', lang, dict_type='title')\n",
         "            f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont = 0\n",
         "            cont = write_single_key_section(f, cont, 'astroType', astronomy_keys, astronomy_values, lang, 'Type')\n",
@@ -1102,7 +1105,7 @@
         "\n",
         "        #Life Sciences Metadata\n",
         "        if len(biomedical_keys) != 0:\n",
-        "            title = translate_key('Life Sciences Metadata', lang, dict_type='title')\n",
+        "            title = translate_key('LIFE SCIENCES METADATA', lang, dict_type='title')\n",
         "            f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont = 0\n",
         "            cont = write_single_key_section(f, cont, 'studyDesignType', biomedical_keys, biomedical_values, lang, 'Design Type')\n",
@@ -1117,7 +1120,7 @@
         "\n",
         "        #Journal metadata\n",
         "        if len(journal_keys) != 0:\n",
-        "            title = translate_key('Journal Metadata', lang, dict_type='title')\n",
+        "            title = translate_key('JOURNAL METADATA', lang, dict_type='title')\n",
         "            f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont = 0\n",
         "            cont = write_grouped_keys_section(f, cont, ['journalVolume', 'journalIssue', 'journalPubDate'], journal_keys, journal_values, lang, 'Journal')\n",
@@ -1125,7 +1128,7 @@
         "\n",
         "        #Computational Workflow metadata\n",
         "        if len(computationalworkflow_keys) != 0:\n",
-        "            title = translate_key('Computational Workflow Metadata', lang, dict_type='title')\n",
+        "            title = translate_key('COMPUTATIONAL WORKFLOW METADATA', lang, dict_type='title')\n",
         "            f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont=0\n",
         "            cont = write_single_key_section(f, cont, 'workflowType', computationalworkflow_keys, computationalworkflow_values, lang, 'workflowType')\n",
@@ -1134,7 +1137,7 @@
         "\n",
         "        #Local Contexts Metadata\n",
         "        if len(LocalContextsCVoc_keys) != 0:\n",
-        "            title = translate_key('Local Contexts Metadata', lang, dict_type='title')\n",
+        "            title = translate_key('LOCAL CONTEXTS METADATA', lang, dict_type='title')\n",
         "            f.write(title + '\\n' + '-' * len(title) + '\\n')\n",
         "            cont=0\n",
         "            cont = write_single_key_section(f, cont, 'LCProjectUrl', LocalContextsCVoc_keys, LocalContextsCVoc_values, lang, 'LCProjectUrl')\n",
