--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -816,7 +816,7 @@
         "            'Dataset DOI':'Dataset DOI',\n",
         "            'Related publication': 'Related publication',\n",
         "            'Geographical location/s of data collection': 'Geographical location/s of data collection',\n",
-        "            'Geographic Bounding Box': 'Geographic Bounding Box'\n",
+        "            'Geographic Bounding Box': 'Geographic Bounding Box',\n",
         "            'Time period covered (single date or date range)': 'Time period covered (single date or date range)',\n",
         "            'Date of data collection (single date or date range)': 'Date of data collection (single date or date range)',\n",
         "            'Target Sample Size': 'Target Sample Size',\n",
